Use official docksyn manna image in docker compose.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       restart: unless-stopped
    manna:
       container_name: manna
-      image: manna      
+      image: docksync/manna      
       volumes:
          - static_html:/app/static
          - ../robocert/letsencrypt:/etc/letsencrypt
