Convert main package to manna package.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3.9-slim 
 RUN python -m venv /venv
 RUN mkdir /app
-COPY serve requirements.txt README.txt *.py /app/
+ADD manna /app/manna
+COPY serve README.txt pyproject.toml setup.cfg /app/
 WORKDIR /app
-RUN /venv/bin/python -m pip install -r requirements.txt
+RUN /venv/bin/python -m pip install -e .
 ENV PATH="/venv/bin:${PATH}"
 CMD ["serve"]
