use docksync/manna for docker compose test configuration

--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -4,7 +4,7 @@ services:
         volumes:
             - ../robocert/selfsigned:/etc/letsencrypt
     manna:
-        image: manna
+        image: docksync/manna
         environment:
             - WORKERS=1
         volumes:
