Removing flawed in memory cache design for file system cache using flask-caching extension.

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ install_requires =
     Flask-Bootstrap 
     Flask-Principal 
     Flask-WTF 
+    Flask-Caching
     gunicorn 
     email-validator 
     python-dateutil
