Refactor to use local storage.

--- a/docker/docker-compose.debug.yml
+++ b/docker/docker-compose.debug.yml
@@ -10,4 +10,5 @@ services:
         volumes:
             - ../:/app
             - ../robocert/selfsigned:/etc/letsencrypt
+            - ./catalog:/catalog
 
