--- a/nginx.hopto.conf
+++ b/nginx.hopto.conf
@@ -8,10 +8,10 @@ server {
 
 server {
  listen              443 ssl;
- server_name         tullahomabiblechurch.org;
+ server_name         manna.hopto.org;
  client_max_body_size 1G;
- ssl_certificate     /etc/letsencrypt/live/tullahomabiblechurch.org/fullchain.pem;
- ssl_certificate_key /etc/letsencrypt/live/tullahomabiblechurch.org/privkey.pem;
+ ssl_certificate     /etc/letsencrypt/live/manna.hopto.org/fullchain.pem;
+ ssl_certificate_key /etc/letsencrypt/live/manna.hopto.org/privkey.pem;
 
  root /var/www/html;
 
